Possible compatibility problems with earlier versions marked with '*'.

--- 2.0.25 2004/09/30

The YAZ GFS when converting SRW/SRU requests to Z39.50 structures
now converts recordSchema to elementSetName as well as schema URI.

Fixed bug in COMSTACK that prevented HTTP request packages from being
decoded properly.

--- 2.0.24 2004/09/29

Added CCL facility r=r "range" which is similar to r=o "ordered" but
does not require white-space before and after the dash in a range, e.g.
x=-1990 is equivalent to x <= 1990 iff r=r, but equivalent to x= -1980
iff r=o.

Fixed a few AC_TRY_LINK configure tests that did not operate properly
due to new GCC removing "redundant" code.

Added yaz-client commands scanpos and scanstep that sets preferred
position and step-size for scan.

Macro YAZ_INIT in yaz.m4: option --with-yazconfig renamed to --with-yaz.

Added CCL utility ccl_qual_buf which parses one or more CCL 
spec lines in a buffer.

Added CCL utility ccl_qual_line which adds CCL qualifier line consisting
of name and value - ignoring empty lines and comments.

On Windows, the debug DLL/import lib is now named yazd.{dll,lib}.

Added odr_get_element_path which returns current element path for an
ODR handle. This utility is useful in error handling or user-defined
ODR_PRINT stream.

Added ODR_PRINT utility odr_set_stream which is is a more generic
alternative to odr_setprint. odr_set_stream takes a stream handle, pointer
to a write function and pointer to close function. The close function - if
non-NULL - will be called during odr_destroy.

Fixed bug in CCL parser where truncation char was not removed from
right side when truncation=both was in effect.

Fixed CQL parser to use unsigned chars for isxxx from ctype.h due
to VS.NET.

--- 2.0.23 2004/08/11

Fix buffer overrun in CQL parser when dealing with proximity (%).

Fixes for MARC-8 in yaz_iconv character set utilies. The MARC-8
to UTF-8/UCS conversion is now only based on codetables.xml.
